// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditableFieldComponent should match snapshot 1`] = `
<ign-editable-field
  ariaBtnLabel={[Function String]}
  editIcon={[Function String]}
  label={[Function String]}
  onIconClick={[Function EventEmitter]}
>
  
      <div
    class="label-container"
  >
    
        
    <div
      class="value flex-lable-value"
      id="editable-value"
      tabindex="0"
    />
    
        
    <button
      aria-describedby="editable-value"
      aria-label="Edit"
      class="mat-icon-button"
      mat-icon-button=""
    >
      
          
      <mat-icon>
        mode_edit
      </mat-icon>
      
        
    </button>
    
      
  </div>
      <div
    class="label"
  >
    label!
  </div>
    
</ign-editable-field>
`;

exports[`EditableFieldInlineComponent should match snapshot 1`] = `
<ign-editable-field-inline
  ariaBtnLabel={[Function String]}
  editIcon={[Function String]}
  label={[Function String]}
  onIconClick={[Function EventEmitter]}
>
  
      <div
    class="label-container"
  >
    
        
    <div
      class="value flex-lable-value"
      id="editable-value"
      tabindex="0"
    >
      
          
      <span
        class="label"
      >
        label!
      </span>
      
          
      
        
    </div>
    
        
    <button
      aria-describedby="editable-value"
      aria-label="Edit"
      class="mat-icon-button"
      mat-icon-button=""
    >
      
          
      <mat-icon>
        mode_edit
      </mat-icon>
      
        
    </button>
    
      
  </div>
    
</ign-editable-field-inline>
`;

exports[`Field should match snapshot 1`] = `
<ign-field
  label={[Function String]}
>
  
      <div
    class="value"
    da="fieldValue"
  >
    
        
    
      
  </div>
      <div
    class="label"
  >
    label!
  </div>
    
</ign-field>
`;

exports[`FieldInlineComponent should match snapshot 1`] = `
<ign-field-inline
  label={[Function String]}
>
  
      <div
    class="value"
    da="fieldValue"
  >
    
        
    <span
      class="label"
    >
      label!
    </span>
    
        
    
      
  </div>
    
</ign-field-inline>
`;
